# dmarc-lens

./: Cargo.toml  LICENSE-MIT  README.ja.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
dmarc-cli/: Cargo.toml
dmarc-cli/src/: args.rs  collect.rs  lib.rs  main.rs  render.rs  summary.rs
dmarc-cli/tests/: cli.rs
dmarc-parser/: Cargo.toml
dmarc-parser/src/: lib.rs  model.rs  raw.rs  read.rs
dmarc-parser/tests/: parser.rs
dmarc-parser/tests/fixtures/: dirty.xml  google.xml  microsoft.xml
docs/: SPEC.md
