[package]
name = "dmarc-lens"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI for analyzing DMARC aggregate (RUA) reports"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dmarc-parser = { version = "0.1.0", path = "../dmarc-parser" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
