[package]
name = "dmarc-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Parser for DMARC aggregate (RUA) reports (RFC 7489 Appendix C)"

[dependencies]
flate2 = "1.1.9"
quick-xml = { version = "0.41.0", features = ["encoding", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
